# ferroni

./: .gitmodules  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORTING_PLAN.md  README.md  TODO_API_PARITY.md  build.rs  codecov.yml  release-please-config.json
.github/workflows/: ci.yml  release.yml
benches/: onig_bench.rs  vscode_scanner_native.c
docs/adr/: 001-one-to-one-parity-with-c-original.md  001-stack-overflow-debug-builds.md  002-encoding-scope-ascii-and-utf8-only.md  003-stack-overflow-debug-builds.md  004-c-to-rust-translation-patterns.md  005-unsafe-code-policy.md  006-simd-accelerated-search.md  007-posix-and-gnu-api-not-ported.md  008-test-strategy-and-c-test-parity.md  009-porting-bugs-lessons-learned.md  010-idiomatic-rust-api-layer.md
scripts/: gen_unicode_fold_data.py  gen_unicode_property_data.py
src/: api.rs  error.rs  ffi.rs  lib.rs  oniguruma.rs  prelude.rs  regcomp.rs  regenc.rs  regerror.rs  regexec.rs  regint.rs  regparse.rs  regparse_types.rs  regset.rs  regsyntax.rs  regtrav.rs  scanner.rs
src/encodings/: ascii.rs  mod.rs  utf8.rs
src/unicode/: egcb_data.rs  fold_data.rs  mod.rs  property_data.rs  wb_data.rs
tests/: api_test.rs  compat_back.rs  compat_options.rs  compat_regset.rs  compat_syntax.rs  compat_utf8.rs
