[package]
name = "ferroni"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust Oniguruma regex engine with SIMD-accelerated search"
license = "BSD-2-Clause"
authors = ["Sebastian Software GmbH"]
repository = "https://github.com/sebastian-software/ferroni"
homepage = "https://github.com/sebastian-software/ferroni"
readme = "README.md"
keywords = ["regex", "oniguruma", "unicode", "pattern-matching", "simd"]
categories = ["text-processing", "parsing"]
rust-version = "1.80"
exclude = ["oniguruma-orig/", "benches/", "docs/", "scripts/"]

[features]
ffi = ["cc"]

[dependencies]
bitflags = "2"
memchr = "2"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"

[[bench]]
name = "onig_bench"
harness = false
required-features = ["ffi"]
