[package]
name = "ferroni"
version = "1.0.1"
edition = "2021"
description = "Pure-Rust Oniguruma regex engine with SIMD-accelerated search"
license = "BSD-2-Clause"
authors = ["Sebastian Software GmbH"]
repository = "https://github.com/sebastian-software/ferroni"
homepage = "https://github.com/sebastian-software/ferroni"
readme = "README.md"
keywords = ["regex", "oniguruma", "unicode", "pattern-matching", "simd"]
categories = ["text-processing", "parsing"]
rust-version = "1.81"
exclude = ["oniguruma-orig/", "vscode-oniguruma/", "benches/", "docs/", "scripts/"]

[features]
ffi = ["cc"]

[dependencies]
bitflags = "2"
memchr = "2"
smallvec = "1"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"

[[bench]]
name = "onig_bench"
harness = false
required-features = ["ffi"]
